Fixed boxes alignment

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -30,7 +30,7 @@ body,html{
     padding: 2rem 4rem;
     border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.1) 0 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
-    flex: 1 1 calc(100%/4);
+    flex: 1 1 calc(100%/3);
     text-decoration: none;
     color: #212020;
   }
